--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint:fix": "eslint src .ts,.tsx --fix"
   },
   "dependencies": {
+    "@types/react": "~18.0.27",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "styled-components": "^5.3.11",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@rocketseat/eslint-config": "^1.2.0",
+    "eslint": "^8.41.0"
   },
   "private": true
 }
