--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint:fix": "eslint src .ts,.tsx --fix"
+    "lint:fix": "eslint src --fix --ext .tsx,.ts"
   },
   "dependencies": {
     "@expo-google-fonts/nunito-sans": "^0.2.3",
@@ -15,10 +15,12 @@
     "expo": "~48.0.15",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "styled-components": "^5.3.11",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
