--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   "dependencies": {
     "@expo-google-fonts/nunito-sans": "^0.2.3",
     "@types/react": "~18.0.27",
+    "babel-plugin-module-resolver": "^5.0.0",
     "expo": "~48.0.15",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-svg": "13.4.0",
     "styled-components": "^5.3.11",
-    "typescript": "^4.9.4",
-    "react-native-svg": "13.4.0"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
