--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito-sans": "^0.2.3",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "@types/react": "~18.0.27",
     "babel-plugin-module-resolver": "^5.0.0",
     "expo": "~48.0.15",
@@ -19,6 +21,8 @@
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "styled-components": "^5.3.11",
     "typescript": "^4.9.4"
@@ -27,6 +31,7 @@
     "@babel/core": "^7.20.0",
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.2.1",
     "eslint": "^8.41.0"
   },
   "private": true
